--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Резюме Бурдук А.С.</title>
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../main.css">
   </head>
   <body>
     <header>
