--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <header>
       <h1>Резюме</h1>
-      <img src="../logo.jpg" alt="фото" title="фото">
+      <img src="logo.jpg" alt="фото" title="фото">
       <!-- Фотография -->
       <nav id="menu">
       <!-- Основные разделы -->
